# mtproto-satori-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.zed/: settings.json
src/: authorization.rs  convert.rs  error.rs  event_publisher.rs  main.rs  routes.rs  satori.rs  self_info_cache.rs  session.rs  settings.rs  telegram.rs
src/convert/: channel.rs  event.rs  guild.rs  link.rs  login.rs  message_receive.rs  message_send.rs  user.rs
src/event_publisher/: callback_query.rs  new_message.rs
src/routes/: internal.rs  login_get.rs  message_create.rs  message_get.rs  message_update.rs  user_channel_create.rs  user_get.rs
src/satori/: element.rs  types.rs
src/telegram/: file_id.rs
