[package]
name = "mtproto-satori"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-tempfile = "0.7.0"
base64 = "0.22.1"
config = "0.15.19"
constant_time_eq = "0.4.2"
derive_more = { version = "2.1.1", features = ["display", "error"] }
env_logger = "0.11.9"
futures-util = "0.3.32"
grammers-client = { version = "0.9.0", features = ["html"] }
grammers-mtsender = { version = "0.9.0", features = ["proxy"] }
grammers-session = { version = "0.9.0", features = ["sqlite-storage"] }
infer = "0.19.0"
lazy_static = "1.5.0"
log = "0.4.29"
mime_guess = "2.0.5"
ntex = { version = "3.5.1", features = ["ws", "tokio"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_repr = "0.1.20"
tokio = "1.49.0"
tokio-util = "0.7.18"
url = "2.5.8"
